--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -17,7 +17,7 @@
 }
 
 .gpt3__navbar-links_logo img{
-  width: 62.56px;
+  width: 62px;
   height: 16px;
 }
 
@@ -47,9 +47,90 @@
 }
 
 .gpt3__navbar-sign button,
-.gpt3__navbar-links_container button {
-
+.gpt3__navbar-menu_container button {
+  padding: 1rem 2rem;
+  color: white;
+  background: #ff4820;
+  font-family: var(--font-family);
+  left: 1153px;
+  top: 55px;
+  border-radius: 5px;
+  font-size: 18px;
+  line-height: 25px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
 }
+
+.gpt3__navbar-menu {
+  margin-left: 1rem;
+  display: none;
+  position: relative;
+}
+
+.gpt3__navbar-menu svg {
+  cursor: pointer;
+}
+
+.gpt3__navbar-menu-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+  text-align: end;
+  background-color: var(--color-footer);
+  padding: 2rem;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  margin-top: 1rem;
+  min-width: 210px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.gpt3__navbar-menu-container p {
+  margin: 1rem 0;
+}
+
+.gpt3__navbar-menu-container-links-sing {
+  display: none;
+}
+
+@media screen and (max-width: 1050px) {
+  .gpt3__navbar-links_container {
+    display: none;
+  }
+
+  .gpt3__navbar-menu {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .gpt3__navbar {
+    padding: 2rem 4rem;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .gpt3__navbar {
+    padding: 2rem;
+  }
+
+  .gpt3__navbar-sign {
+  display: none;
+  }
+
+  .gpt3__navbar_menu_container {
+    top: 20px;
+  }
+
+  .gpt3__navbar-menu-container-links-sing {
+    display: block;
+  }
+}
+
 
 
 
