--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,102 +1,127 @@
-.gpt3__navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  padding: 2rem 6rem;
-}
-
-.gpt3__navbar-links {
-  flex: 1;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.gpt3__navbar-links_logo {
-  margin-right: 2rem;
-}
-
-.gpt3__navbar-links_logo img {
-  width: 62.56px;
-  height: 16.02px;
-}
-
-.gpt3__navbar-links_container {
+.gpt3__header {
   display: flex;
   flex-direction: row;
 }
 
-.gpt3__navbar-sign {
+.gpt3__header-content {
+  flex: 1;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+
+  margin-right: 5rem;
+}
+
+.gpt3__header-content h1 {
+  font-family: var(--font-family);
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 75px;
+  letter-spacing: -0.04em;
+  color:#f5f5f5;
+}
+
+.gpt3__header-content p {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  color: var(--color-text);
+
+  margin-top: 1.5rem;
+}
+
+.gpt3__header-content__input {
+  width: 100%;
+  margin: 2rem 0 1rem;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.gpt3__header-content__input input {
+  flex: 2;
+  width: 100%;
+  min-height: 50px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  background: var(--color-footer);
+  border: 2px solid var(--color-footer);
+  padding: 0 1rem;
+  outline: none;
+  color: #fff;
+
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.gpt3__header-content__input button {
+  flex: 0.6;
+  width: 100%;
+  min-height: 50px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  background: #FF4820;
+  border: 2px solid #FF4820;
+  padding: 0 1rem;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.gpt3__header-content__people {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+
+  margin-top: 2rem;
+}
+
+.gpt3__header-content__people img {
+  width: 181.79px;
+  height: 38px;
+}
+
+.gpt3__header-content__people p {
+  margin: 0 0 0 1rem;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 38px;
+  color: #fff;
+  text-align: center;
+}
+
+.gpt3__header-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.gpt3__navbar-links_container p,
-.gpt3__navbar-sign p,
-.gpt3__navbar-menu_container p {
-  color: #fff;
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 25px;
-  text-transform: capitalize;
-
-  margin: 0 1rem;
-  cursor: pointer;
+.gpt3__header-image img {
+  width: 100%;
+  height: 100%;
 }
 
-.gpt3__navbar-sign button,
-.gpt3__navbar-menu_container button {
-  padding: 0.5rem 1rem;
-  color: #fff;
-  background: #FF4820;
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 25px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
+@media screen and (max-width: 1050px) {
+  .gpt3__header {
+    flex-direction: column;
+  }
 
-.gpt3__navbar-menu {
-  margin-left: 1rem;
-
-  display: none;
-  position: relative;
-}
-
-.gpt3__navbar-menu svg {
-  cursor: pointer;
-}
-
-.gpt3__navbar-menu_container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  flex-direction: column;
-
-  text-align: end;
-  background: var(--color-footer);
-  padding: 2rem;
-  position: absolute;
-  right: 0;
-  top: 40px;
-  margin-top: 1rem;
-  min-width: 210px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
-}
-
-.gpt3__navbar-menu_container p {
-  margin: 1rem 0;
-}
-
-.gpt3__navbar-menu_container-links-sign {
-  display: none;
+  .gpt3__header-content {
+    margin: 0 0 3rem;
+  }
 }
 
 @media screen and (max-width: 650px) {
